[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "email-triage-openenv"
version = "0.1.0"
description = "Email Triage & Inbox Management OpenEnv environment."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "OpenEnv Team", email = "support@openenv.ai" },
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "requests",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["server", "environment.py", "models.py", "main.py", "inference.py"]
