[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "email-triage-openenv"
version = "0.1.0"
description = "Email Triage & Inbox Management OpenEnv environment."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
        "uvicorn",
            "pydantic",
                "openai",
                    "requests",
                        "openenv-core>=0.2.0",
                        ]

                        [project.scripts]
                        server = "server.app:main"

                        [tool.hatch.build.targets.wheel]
                        packages = ["server"]

                        [project.optional-dependencies]
                        dev = [
                            "pytest",
                                "httpx",
                                ]
                                
                        ]
]